--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=blogging-application
+spring.datasource.url= jdbc:mysql://localhost:3306/blogging_application
+spring.datasource.username=root
+spring.datasource.password=7699
+
+spring.jpa.hibernate.ddl_auto=update
